--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div id="wrap">
 		<div class="t-bar">
 			<div class="inner">
-				<a href="#/coding-guide" class="btn-write">Coding Guide</a>
+				<a href="#/coding-guide" class="btn-write">Coding Guide11</a>
 			</div>
 		</div>
 		<header id="header" role="banner">
